# signalcut

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
artifacts/threadloom/: DECISION.md  PREVIEW_DECISION.md  evidence-manifest.json  render-proof.json  selection-receipt.json  story-candidates.json  storyboard.json
docs/: OPENAI_BUILD_WEEK_QUALIFYING_EXTENSION_2026-07-19.md
docs/openai-build-week/: DEMO_SCRIPT.md  DEVPOST_FINALIZATION_RECONCILIATION_2026-07-20.md  DEVPOST_SUBMISSION.md  FEEDBACK_SESSION_RECOVERY_NOTE_2026-07-20.md  NARRATION.txt  ORION_L_SIGNALCUT_OPENAI_BUILD_WEEK_RECEIPT_2026-07-19.md  SIGNALCUT_OFFICIAL_RULES_RECONCILIATION_2026-07-20.md  SIGNALCUT_PUBLIC_JUDGE_REPLAY_2026-07-20.md  SIGNALCUT_PUBLIC_REVIEW_URL_FIX_2026-07-21.md  SUBMISSION_CHECKLIST.md  VIDEO_RECEIPT.md
fixtures/threadloom/: project.json
receipts/: SIGNALCUT_DEVPOST_FINALIZATION_READY_2026-07-20.md  SIGNALCUT_DEVPOST_FINALIZATION_RECONCILIATION_RECEIPT_2026-07-20.md  SIGNALCUT_FEEDBACK_SESSION_RECOVERY_RECEIPT_2026-07-20.md  SIGNALCUT_OFFICIAL_RULES_RECONCILIATION_RECEIPT_2026-07-20.md  SIGNALCUT_PUBLIC_JUDGE_REPLAY_RECEIPT_2026-07-20.md  SIGNALCUT_PUBLIC_REVIEW_URL_FIX_RECEIPT_2026-07-21.md  SIGNALCUT_RENDERED_STORY_CLARITY_PATCH_2026-07-20.md
render/threadloom-preview/: package-lock.json  package.json  tsconfig.json
review/signalcut-desk/: index.html  package-lock.json  package.json  vite.config.ts
src/signalcut/: __init__.py  cli.py  evidence.py  (+2 more)
tests/: test_claim_review.py  test_cli.py  test_editorial.py  test_evidence.py  test_models.py
(+14 files in other folders)
