[project]
name = "signalcut"
version = "0.1.0"
description = "Proof-first editorial demo pipeline"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "pillow>=11.0,<13",
  "pydantic>=2.10,<3",
  "typer>=0.15,<1",
]

[project.scripts]
signalcut = "signalcut.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
